[tool.poetry]
name = "python-gtk-3-tutorial"
version = "0.1.0"
description = "Python GTK3 Tutorial"
authors = ["Arun Kr. Khattri <arunkhattri@outlook.com>"]
license = "GPLv3.0"
readme = "README.md"
packages = [{include = "python_gtk_3_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
pycairo = "^1.21.0"
PyGObject = "^3.42.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pyflakes = "^2.5.0"
isort = "pytest"
PyGObject-stubs = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
